已完成sort_seque聚类功能

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 caogao.py
-src/
+src/*
 test/
 草稿*
 .idea/
 bulid/
 __pycache__/
 out_species_sequence.py
-#sequence_class.py
-#.gitignore
+#sort_sequence.py
+.gitignore
